
    Both APT:: and Apt:: (the other common form that we were using) are valid,
    in fact they are case-agnostic.  But for internal consistency and specially
    for consistency with APT documentation (apt.conf), use the uppercase form.
    
    This mostly affects documentation, but also some code and translations.  It
    was substituted automatically in all translations.

- Internal changes:

  * temp.cc: simplify code and messages and reduce the use of boost libs

  * configure.ac: Remove checks for boost/scoped_array.hpp and boost/random.hpp,
    not used anymore -- a few seconds less per compilation

  * In file pkg_ver_item.cc, function pkg_ver_columnizer::setup_column(), the
    switch/case handling for longstate was missing the options added in 2007 for
    APT_HAS_TRIGGERS, present for stageflag case and both cases in
    pkg_columnizer::setup_column() of pkg_columnizer.cc.

    (In other words, it was missing in 1 of these 4 places where it is
    necessary).

  * Disable obsolete checks in configure.ac and preprocessor checks in code for
    APT_HAS_TRIGGERS, APT_HAS_HOMEPAGE and HAVE_DDTP.

    The support for these functionalities has been present in all involved tools
    since 2007-2008 or earlier, so it is safe to disable the checks and the
    dead code.

  * Add functions to check if packages are installed, automatically installed,
    if they are virtual, and others.  They can be used later to make other code
    more consistent, clear and clean.

  * Remove sigc++ include from apt_config_widgets.h (fails to build with newer
    versions)

- Documentation:

  * Guide/User's Manual:

    * Document Brown colour for downgraded packages in UI (feature implemented
      in the last version)

- Translation updates:

  * Russian by Lev Lamberov (Closes: #769425)

  * Dutch by Frans Spiesschaert (Closes: #800516)


[2015-09-17]
Version 0.7.2

- New features:

  * 'Escape' key cancels input dialogs (search, limit, etc.) (Closes: #493322)
