@@ -114,6 +114,13 @@ Version 0.7.3 UNRELEASED
     This mostly affects documentation, but also some code and translations.  It
     was substituted automatically in all translations.
 
+  * [cmdline] Print versions of Provides, if they exist (Closes: #767393)
+
+    Some aspects of the bug report refer to the curses TUI and it is still
+    unclear how to deal with them, so it was cloned to another report; but the
+    change implemented for this part could be useful, it is harmless, and it
+    simplifies code (two branches differentiating for this reason now merge).
+
 - Internal changes:
 
   * temp.cc: simplify code and messages and reduce the use of boost libs
